--- a/main.css
+++ b/main.css
@@ -3,7 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     font-family: "Din";
-    color: rgb(72, 255, 0);
+    color: rgb(0, 0, 0);
 }
 
 h1,h2{
@@ -11,7 +11,7 @@ h1,h2{
 }
 
 body{
-    background: rgb(0, 0, 0);
+    background: rgb(230, 228, 228) !important;
     flex-direction: column;
     justify-content: center;
     align-items: center;
